Cache smoke runner validation independently